@@ -10,6 +10,7 @@ Version 1.8.3
   o Added new setNoFollow function
   o Added setRewrite and setAnchor functions.
 + Time - changed getDTTime to return gmtime
++ Forward - a single variable after the module is considered to be an 'id'
 + Updated: conf/smiles.pak, images/core/smilies/rofl.gif
 
 8 August 2008
